# hmcnc

./: .gitignore  Dockerfile  README.md  meson.build
.github/workflows/: c-cpp.yml
HMM/: Makefile  caller.smk  filter_finalize_call.sh  hmcnc
HMM/annotation/: HG.region_EXCLUDE.bed
include/: hmcnc.h  hmcnc_defs.h  hmcnc_io.h  hmmcnc.h
src/: BW.py  Makefile  hmcnc.py  hmcnc_2.py  hmcnc_3.py  hmcnc_defs.cpp  hmcnc_io.cpp  hmcnc_io.py  hmmcnc.cpp  main.cpp  meson.build  plot_cn.R  viterbi.lrclip.cpp
tests/: meson.build  test_hmcnc.cpp  test_hmcnc_io.cpp  test_hmmcnc.cpp
tests/cram/: chr22.t  meson.build
tests/data/: chr22.vcf
tests/unit/: meson.build  test_hmcnc.cpp  test_hmcnc_io.cpp
